unpackaged/main/default/objects/pse__Utilization_Calculation__c/pse__Utilization_Calculation__c.object-meta.xml
<CustomObject>
    <customHelpPage>pse__UtilizationCalculationHelp</customHelpPage>
    <description>A container object that holds information on resource utilization at a single point in time. Utilization calculation, detail, and (optionally) summary records are created when you calculate utilization for a resource, region, practice, or group. FinancialForce PSA calculates utilization as a percentage: the number of hours resources have billed, divided into the number of billable hours in a given time period. If configured, utilization also calculates the number of hours resources are assigned in the future (held against resource requests), or aggregates requested and assigned hours by role.

Run utilization reports on the information stored in this object to understand how utilized your resources are in comparison with their work calendar hours.</description>
    <label>Utilization Calculation</label>
    <nameField>
        <label>Utilization Calculation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Utilization Calculations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>