unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Default_Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>pse__Default_Opportunity_Probability__c</fullName>
    <description>Where resource requests (on the region, practice or group on which the utilization calculation is run) do not have a value for Probability (%) on the linked opportunity, determines the default percentage value to use to weight held and unheld hours. The default value is 100.</description>
    <inlineHelpText>Where resource requests on the RPG on which the utilization calculation is run do not have a Probability (%) value on the opportunity, determines the default percentage value to use to weight held and unheld hours.</inlineHelpText>
    <label>Default Opportunity Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>