unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Delete_Prior_Calculation__c.field-meta.xml
<CustomField>
    <fullName>pse__Delete_Prior_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When selected, the previous calculations and details are deleted when utilization is calculated. Whether the calculation is deleted also depends on the combination of RPG, resource, and time period, or the time period parent combination. This option is applicable when the current utilization calculation is the master and uses the same logic as clearing the Is Report Master checkbox.</description>
    <inlineHelpText>When selected, previous calculations and details are deleted when utilization is calculated based on either the resource or the time period or parent combination using the same logic used by Is Report Master.</inlineHelpText>
    <label>Delete Prior Calculation</label>
    <type>Checkbox</type>
</CustomField>