unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Historical_Utilization_Cut_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Historical_Utilization_Cut_Off_Date__c</fullName>
    <inlineHelpText>Select the value that describes when historical utilization calculations should stop. This is typically the last day of the week that all timecards were entered.</inlineHelpText>
    <label>Historical Utilization Cut-Off Date</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>End of Last Week</fullName>
                <default>true</default>
                <label>End of Last Week</label>
            </value>
            <value>
                <fullName>Today</fullName>
            </value>
            <value>
                <fullName>End of This Week</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>