unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Historical_Utilization_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Historical_Utilization_Start_Date__c</fullName>
    <label>Historical Utilization Start Date</label>
    <type>Date</type>
</CustomField>