unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Is_Report_Master__c.field-meta.xml
<CustomField>
    <fullName>pse__Is_Report_Master__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Whether this calculation is the master calculation for the combination of Region/Practice/Group/Resource and Time Period.</inlineHelpText>
    <label>Is Report Master</label>
    <type>Checkbox</type>
</CustomField>