unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Minimum_Opportunity_Probability__c.field-meta.xml
<CustomField>
    <fullName>pse__Minimum_Opportunity_Probability__c</fullName>
    <description>Where resource requests (on the region, practice or group on which the utilization calculation is run) have a value for Probability (%) on the linked opportunity, determines the minimum threshold below which opportunity probability is not considered when calculating capacity demand by role. The default value is 0.</description>
    <inlineHelpText>Where resource requests on a RPG on which the utilization calculation is run have a Probability (%) value on the opportunity, determines the minimum threshold below which opportunity probability is not considered when calculating capacity demand by role.</inlineHelpText>
    <label>Minimum Opportunity Probability</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>