unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Practice__c.field-meta.xml
<CustomField>
    <fullName>pse__Practice__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Practice</label>
    <referenceTo>pse__Practice__c</referenceTo>
    <relationshipLabel>Utilization Calculations</relationshipLabel>
    <relationshipName>Utilization_Calculations</relationshipName>
    <type>Lookup</type>
</CustomField>