unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Scheduled_Utilization_End_Date__c.field-meta.xml
<CustomField>
    <fullName>pse__Scheduled_Utilization_End_Date__c</fullName>
    <label>Scheduled Utilization End Date</label>
    <type>Date</type>
</CustomField>