unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Status__c.field-meta.xml
<CustomField>
    <fullName>pse__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Error Occurred</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>