unpackaged/main/default/objects/pse__Utilization_Calculation__c/fields/pse__Type__c.field-meta.xml
<CustomField>
    <fullName>pse__Type__c</fullName>
    <inlineHelpText>Select a type that describes this calculation.</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Last Week</fullName>
            </value>
            <value>
                <fullName>Current Week and Last Week</fullName>
            </value>
            <value>
                <fullName>Week to Date</fullName>
            </value>
            <value>
                <fullName>Week Forecast</fullName>
            </value>
            <value>
                <fullName>Current Week and Next Week</fullName>
            </value>
            <value>
                <fullName>Last, Current and Next Week</fullName>
            </value>
            <value>
                <fullName>Next Week</fullName>
            </value>
            <value>
                <fullName>Last Month</fullName>
            </value>
            <value>
                <fullName>Current Month and Last Month</fullName>
            </value>
            <value>
                <fullName>Month to Date</fullName>
            </value>
            <value>
                <fullName>Month Forecast</fullName>
            </value>
            <value>
                <fullName>Current Month and Next Month</fullName>
            </value>
            <value>
                <fullName>Last, Current and Next Month</fullName>
            </value>
            <value>
                <fullName>Next Month</fullName>
            </value>
            <value>
                <fullName>Last Quarter</fullName>
            </value>
            <value>
                <fullName>Current Quarter and Last Quarter</fullName>
            </value>
            <value>
                <fullName>Quarter to Date</fullName>
            </value>
            <value>
                <fullName>Quarter Forecast</fullName>
            </value>
            <value>
                <fullName>Current Quarter and Next Quarter</fullName>
            </value>
            <value>
                <fullName>Last, Current and Next Quarter</fullName>
            </value>
            <value>
                <fullName>Next Quarter</fullName>
            </value>
            <value>
                <fullName>Last Year</fullName>
            </value>
            <value>
                <fullName>Current Year and Last Year</fullName>
            </value>
            <value>
                <fullName>Year to Date</fullName>
            </value>
            <value>
                <fullName>Year Forecast</fullName>
            </value>
            <value>
                <fullName>Current Year and Next Year</fullName>
            </value>
            <value>
                <fullName>Last, Current and Next Year</fullName>
            </value>
            <value>
                <fullName>Next Year</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>