unpackaged/main/default/objects/pse__Utilization_Calculation__c/validationRules/pse__check_scheduled_end_date.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__check_scheduled_end_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(pse__Calculate_Scheduled_Utilization__c, pse__Scheduled_Utilization_End_Date__c &lt; pse__Scheduled_Utilization_Start_Date__c)</errorConditionFormula>
    <errorDisplayField>pse__Scheduled_Utilization_End_Date__c</errorDisplayField>
    <errorMessage>End date is prior to the start date</errorMessage>
</ValidationRule>