unpackaged/main/default/objects/pse__Utilization_Calculation__c/validationRules/pse__only_one_source_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__only_one_source_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>IF
(
IF(ISBLANK(pse__Region__c),0,1) + 
IF(ISBLANK(pse__Practice__c),0,1) +   
IF(ISBLANK(pse__Group__c),0,1) +
IF(ISBLANK(pse__Resource__c),0,1) &gt; 1,
true,
false
)</errorConditionFormula>
    <errorMessage>Only one of Region, Practice, Group, or Resource may be specified.</errorMessage>
</ValidationRule>