unpackaged/main/default/objects/pse__Utilization_Calculation__c/validationRules/pse__only_one_subtotal_source_allowed.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__only_one_subtotal_source_allowed</fullName>
    <active>true</active>
    <errorConditionFormula>IF
(
IF(ISBLANK(pse__Subtotal_by_Region__c),0,1) + 
IF(ISBLANK(pse__Subtotal_by_Practice__c),0,1) +   
IF(ISBLANK(pse__Subtotal_by_Group__c),0,1) &gt; 1,
true,
false
)</errorConditionFormula>
    <errorMessage>Only one value may be specified: Subtotal by Region, Practice or Group.</errorMessage>
</ValidationRule>