unpackaged/main/default/objects/pse__Utilization_Calculation__c/validationRules/pse__scheduled_dates_requried_if_checked.validationRule-meta.xml
<ValidationRule>
    <fullName>pse__scheduled_dates_requried_if_checked</fullName>
    <active>true</active>
    <errorConditionFormula>AND( pse__Calculate_Scheduled_Utilization__c, OR(ISBLANK(pse__Scheduled_Utilization_Start_Date__c), ISBLANK(pse__Scheduled_Utilization_End_Date__c)))</errorConditionFormula>
    <errorDisplayField>pse__Calculate_Scheduled_Utilization__c</errorDisplayField>
    <errorMessage>Scheduled Start and End Date are required</errorMessage>
</ValidationRule>