unpackaged/main/default/objects/pse__Utilization_Calculation__c/listViews/pse__All.listView-meta.xml
<ListView>
    <fullName>pse__All</fullName>
    <columns>NAME</columns>
    <columns>pse__Historical_Utilization_Start_Date__c</columns>
    <columns>pse__Historical_Utilization_End_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>pse__Region__c</columns>
    <columns>pse__Practice__c</columns>
    <columns>pse__Group__c</columns>
    <columns>pse__Resource__c</columns>
    <columns>pse__Status__c</columns>
    <columns>pse__Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
</ListView>